base/src/test/resources/failure/patterns/confl.aya.txt
In file $FILE:5:4 ->

  3 |  | suc Nat
  4 | 
  5 | def addN (a b : Nat) : Nat
  6 |  | zero, a => suc a
         ^--------------^ substituted to `suc zero`
  7 |  | a, zero => a
         ^----------^ substituted to `zero`

Error: The 1st and the 2nd clauses are not confluent because we failed to unify `suc zero` and `zero`
What are you doing?
